--- a/views/editArtistForm.ejs
+++ b/views/editArtistForm.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register Artist</title>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
     <%- include('bootstrap') %>
 </head>
 <body>
@@ -45,5 +46,7 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
 
-</body>
-</html>
+      <%- include('footer') %>
+
+    </body>
+  </html>
