--- a/views/registerArtist.ejs
+++ b/views/registerArtist.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register Artist</title>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
     <%- include('bootstrap') %>
 </head>
 <body>
@@ -12,7 +12,7 @@
 
     <h2>Artist registration form</h2>
 
-    <form action="" method="post" enctype="multipart/form-data" >
+    <form action="/artist/registerArtist" method="post" enctype="multipart/form-data" >
         <div class="form-group">
           <label for="name">Name</label>
           <input type="text" class="form-control" id="name" name="name" aria-describedby="" placeholder="Enter your name">
@@ -49,5 +49,7 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
 
-</body>
-</html>
+      <%- include('footer') %>
+
+    </body>
+  </html>
