--- a/views/bootstrap.ejs
+++ b/views/bootstrap.ejs
@@ -1,3 +1,6 @@
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;800&family=Roboto:ital,wght@0,100;0,300;0,500;1,500&display=swap" rel="stylesheet">
 <link
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
   rel="stylesheet"
