--- a/views/editWorkForm.ejs
+++ b/views/editWorkForm.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Artwork</title>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
     <%- include('bootstrap') %>
 </head>
 <body>
@@ -29,5 +30,7 @@
       </form>
 
 
-</body>
-</html>
+      <%- include('footer') %>
+
+    </body>
+  </html>
