--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,6 +1,7 @@
-<nav class="navbar text-center navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+
+<nav class="navbar justify-content-center navbar-expand-sm bg-dark navbar-dark sticky-top d-flex">
+    <div class="container-fluid justify-content-center ">
+      <a class="navbar-brand" href="/artist"><strong>The Gallery</strong></a>
       <button
         class="navbar-toggler"
         type="button"
@@ -12,10 +13,10 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse menu-nav" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/artist"
+            <a class="nav-link" aria-current="page" href="/artist"
               >Home</a
             >
           </li>
@@ -37,4 +38,5 @@
       </div>
     </div>
   </nav>
+
   
