--- a/views/registerWorkFromNav.ejs
+++ b/views/registerWorkFromNav.ejs
@@ -5,19 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register Artwork</title>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+
+    
     <%- include('bootstrap') %>
+
 </head>
 <body>
-
-    <script>
-        let selectArtists = document.getElementById("artist_select");
-    </script>
-
     <%- include('navbar') %>
 
-    <h2>Artwork registration form</h2>
 
-    <form action="" method="post" enctype="multipart/form-data" >
+    <h2>Hola registration form</h2>
+    
+
+
+    <form action="/work/saveWorkFormFromNav/0" method="post" id="formAddWork" enctype="multipart/form-data" >
         <div class="form-group">
           <label for="title">Title</label>
           <input type="text" class="form-control" id="title" name="title" aria-describedby="" placeholder="Enter title">
@@ -32,12 +34,12 @@
         </div>
         <div>
             
-            <select class="custom-select artist_select" id="artist_select">
+            <select class="custom-select artist_select" id="artist_select" name="artist_select" onChange="handleSelectArtistChange()">
                 
                 <option selected>Select Artist</option>
                 
                 <% resultArtist.forEach(artist => { %>
-                    selectArtists.appendChild(<%= artist.artist_name %>); 
+                    
                     <option value="<%= artist.artist_id %>"><%= artist.name %></option>              
                 <% }) %>
 
@@ -47,8 +49,11 @@
 
         <button type="submit" class="btn btn-primary">Submit</button>
         
-      </form>
+    </form>
 
+
+      <%- include('footer') %>
+      <%- include('selectArtist') %>
 
 </body>
 </html>
