--- a/views/editArtistForm.ejs
+++ b/views/editArtistForm.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>The Gallery</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +13,7 @@
     <%- include('navbar') %>
 
     <h2>Edit artist info</h2>
-
+    
     <form action="/artist/editArtist/<%= result[0].artist_id %>" method="post" enctype="multipart/form-data" >
         <div class="form-group">
           <label for="name">Name</label>
