--- a/views/artistProfile.ejs
+++ b/views/artistProfile.ejs
@@ -2,38 +2,64 @@
 <html>
   <head>
     <title>The Gallery</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <%- include('bootstrap') %>
   </head>
   <body>
     <%- include('navbar') %>
 
-    <h2>ARTIST INFO</h2>
+    <div class="container container-profile">
+      <h2>ARTIST INFO</h2>
+      <div class="row row-profile">
+        <div class="col-6 col-sm-12 col-xs-12 col-profile-photo d-flex" style="background-image: url('/images/artists/<%= resultArtist[0].img %>');">  
+          <a class="btn-general btn-profile" href="/work/showWorkForm/<%= resultArtist[0].artist_id %>">Add Work</a>               
+        </div>
+        <div class="col-6 col-sm-12 col-xs-12 col-profile-text">
+          <h3 class="h3-profile-artist-data"><%= resultArtist[0].name %> <%= resultArtist[0].last_name %></h3>
+          <h3 class="h3-profile-artist-data alias">"<%= resultArtist[0].alias %>"</h3>
+          <br>
+          <br>
+          <h5 class="h5-profile-artist-data"><%= resultArtist[0].email %></h5>
+          <h5 class="h5-profile-artist-data">Phone number: <%= resultArtist[0].phone_number %></h5>
+          <br>
+          <h5 class="h5-profile-artist-data">"<%= resultArtist[0].description %>"</h5>
+        </div>
+      </div>
+    </div>
 
-    <a href="/work/showWorkForm/<%= resultArtist[0].artist_id %>">Add Work</a>
+    <div class="container-fluid container-artwork-big">
+      <div class="title-profile-artwork">
+        <h3>Artwork</h3>
+      </div>    
+      <div class="container container-profile-artwork d-flex">               
+        <% resultWork.forEach(work => { %>
+        <div class="row row-profile-artwork-loop">            
+          <div class="col-lg-6 col-sm-6 col-xs-12 col-profile-artwork d-flex">
+            <div class="row row-profile-artwork-inside">
+              <div class="col-lg-6 col-sm-12 col-xs-12 col-profile-artwork-photo align-items-center d-flex">
+                <img src="/images/works/<%= work.img %>" alt="" width="200" />
+              </div>
+              <div class="col-lg-6 col-sm-12 col-xs-12 col-profile-artwork-text d-flex">
+                <p class="work-title-profile"><%= work.title %></p>
+                <p class="work-description"><%= work.description %></p>
+                <a href="/work/showWorkEditForm/<%= work.work_id %>" class="btn-general btn-profile btn-profile-work" role="button" aria-pressed="true">Edit</a>
+                <a href="/work/deleteWork/<%= work.work_id %>/<%= resultArtist[0].artist_id %>" class="btn-general btn-profile btn-profile-work" role="button" aria-pressed="true">Delete</a>
 
-    <a href="/artist/editArtist/<%= resultArtist[0].artist_id %>">Edit profile</a>
-
-    <br />
-    <img
-      src="/images/artists/<%= resultArtist[0].img %>"
-      alt=""
-      width="200"
-    />
-    <p><%= resultArtist[0].name %></p>
-    <p><%= resultArtist[0].email %></p>
-    <hr />
-    <h2>WORKS OF THIS ARTIST</h2>
-    <% resultWork.forEach(work => { %>
-    <img src="/images/works/<%= work.img %>" alt="" width="200" />
-    <p><%= work.title %></p>
-    <a href="/work/showWorkEditForm/<%= work.work_id %>" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Edit</a>
-    <a href="/work/deleteWork/<%= work.work_id %>/<%= resultArtist[0].artist_id %>" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Delete</a>
-
-
-    <% }) %>
-
-    <%- include('footer') %>
-
+              </div>
+            </div>
+            
+            
+          
+          </div>
+          <hr>
+        </div>
+        <% }) %>   
+      </div>
+    </div>
+    <div class="footer-profile">
+      <%- include('footer') %>
+    </div>
+    
 </body>
 </html>
