--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -18,7 +18,7 @@
                     <li class="li-footer-normal"><a href="">The Gallery Ⓒ</a></li>
                     <li class="li-footer-normal"><a href="">629 Main St.</li>
                     <li class="li-footer-normal"><a href="">29879 Croatoan</li>
-                    <li class="li-footer-normal"><a href="">infp@thegallery.com</li>
+                    <li class="li-footer-normal"><a href="">info@thegallery.com</li>
                 </ul>
             </div>
         </div>
